class Historico:
    def __init__(self):
        self.transacoes = []